--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 flask
 wheel
-git+https://github.com/facebookresearch/llama.git
+llama @ git+https://github.com/facebookresearch/llama.git@82ce861078ce1d2a1ac17db15bda3604c684ccbe#egg=llama
